# document-parser-api

./: README.md  main.py  pyproject.toml
src/: pdf_parser.py
